--- a/Rough work/hybrid_model.ipynb
+++ b/Rough work/hybrid_model.ipynb
@@ -192,7 +192,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 17,
    "id": "5fb45b7a",
    "metadata": {},
    "outputs": [],
@@ -204,7 +204,7 @@
     "        self.linear1 = nn.Linear(hidden_size, n_qubits)\n",
     "        self.quantum = QuantumLayer()\n",
     "        self.linear2 = nn.Linear(n_qubits, output_size)\n",
-    "        self.output_activation = nn.Sigmoid()\n",
+    "        self.output_activation = nn.ReLU()\n",
     "        \n",
     "\n",
     "\n",
@@ -233,7 +233,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 18,
    "id": "230b597b",
    "metadata": {},
    "outputs": [],
@@ -256,7 +256,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 19,
    "id": "ab91aeaf",
    "metadata": {},
    "outputs": [],
@@ -287,7 +287,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 20,
    "id": "e2ecc604",
    "metadata": {},
    "outputs": [
@@ -295,45 +295,45 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch 1/20 - Loss: 0.082727\n",
-      "Epoch 2/20 - Loss: 0.065546\n",
-      "Epoch 2/20 - Loss: 0.065546\n",
-      "Epoch 3/20 - Loss: 0.055348\n",
-      "Epoch 3/20 - Loss: 0.055348\n",
-      "Epoch 4/20 - Loss: 0.049534\n",
-      "Epoch 4/20 - Loss: 0.049534\n",
-      "Epoch 5/20 - Loss: 0.046349\n",
-      "Epoch 5/20 - Loss: 0.046349\n",
-      "Epoch 6/20 - Loss: 0.044644\n",
-      "Epoch 6/20 - Loss: 0.044644\n",
-      "Epoch 7/20 - Loss: 0.043746\n",
-      "Epoch 7/20 - Loss: 0.043746\n",
-      "Epoch 8/20 - Loss: 0.042905\n",
-      "Epoch 8/20 - Loss: 0.042905\n",
-      "Epoch 9/20 - Loss: 0.042933\n",
-      "Epoch 9/20 - Loss: 0.042933\n",
-      "Epoch 10/20 - Loss: 0.042758\n",
-      "Epoch 10/20 - Loss: 0.042758\n",
-      "Epoch 11/20 - Loss: 0.042455\n",
-      "Epoch 11/20 - Loss: 0.042455\n",
-      "Epoch 12/20 - Loss: 0.042432\n",
-      "Epoch 12/20 - Loss: 0.042432\n",
-      "Epoch 13/20 - Loss: 0.042479\n",
-      "Epoch 13/20 - Loss: 0.042479\n",
-      "Epoch 14/20 - Loss: 0.042521\n",
-      "Epoch 14/20 - Loss: 0.042521\n",
-      "Epoch 15/20 - Loss: 0.042516\n",
-      "Epoch 15/20 - Loss: 0.042516\n",
-      "Epoch 16/20 - Loss: 0.042605\n",
-      "Epoch 16/20 - Loss: 0.042605\n",
-      "Epoch 17/20 - Loss: 0.042597\n",
-      "Epoch 17/20 - Loss: 0.042597\n",
-      "Epoch 18/20 - Loss: 0.042522\n",
-      "Epoch 18/20 - Loss: 0.042522\n",
-      "Epoch 19/20 - Loss: 0.042329\n",
-      "Epoch 19/20 - Loss: 0.042329\n",
-      "Epoch 20/20 - Loss: 0.042620\n",
-      "Epoch 20/20 - Loss: 0.042620\n"
+      "Epoch 1/20 - Loss: 0.086935\n",
+      "Epoch 2/20 - Loss: 0.086953\n",
+      "Epoch 2/20 - Loss: 0.086953\n",
+      "Epoch 3/20 - Loss: 0.087350\n",
+      "Epoch 3/20 - Loss: 0.087350\n",
+      "Epoch 4/20 - Loss: 0.086601\n",
+      "Epoch 4/20 - Loss: 0.086601\n",
+      "Epoch 5/20 - Loss: 0.087476\n",
+      "Epoch 5/20 - Loss: 0.087476\n",
+      "Epoch 6/20 - Loss: 0.086801\n",
+      "Epoch 6/20 - Loss: 0.086801\n",
+      "Epoch 7/20 - Loss: 0.087750\n",
+      "Epoch 7/20 - Loss: 0.087750\n",
+      "Epoch 8/20 - Loss: 0.087293\n",
+      "Epoch 8/20 - Loss: 0.087293\n",
+      "Epoch 9/20 - Loss: 0.086989\n",
+      "Epoch 9/20 - Loss: 0.086989\n",
+      "Epoch 10/20 - Loss: 0.087338\n",
+      "Epoch 10/20 - Loss: 0.087338\n",
+      "Epoch 11/20 - Loss: 0.087104\n",
+      "Epoch 11/20 - Loss: 0.087104\n",
+      "Epoch 12/20 - Loss: 0.086910\n",
+      "Epoch 12/20 - Loss: 0.086910\n",
+      "Epoch 13/20 - Loss: 0.087037\n",
+      "Epoch 13/20 - Loss: 0.087037\n",
+      "Epoch 14/20 - Loss: 0.087090\n",
+      "Epoch 14/20 - Loss: 0.087090\n",
+      "Epoch 15/20 - Loss: 0.087255\n",
+      "Epoch 15/20 - Loss: 0.087255\n",
+      "Epoch 16/20 - Loss: 0.087323\n",
+      "Epoch 16/20 - Loss: 0.087323\n",
+      "Epoch 17/20 - Loss: 0.087014\n",
+      "Epoch 17/20 - Loss: 0.087014\n",
+      "Epoch 18/20 - Loss: 0.087172\n",
+      "Epoch 18/20 - Loss: 0.087172\n",
+      "Epoch 19/20 - Loss: 0.086601\n",
+      "Epoch 19/20 - Loss: 0.086601\n",
+      "Epoch 20/20 - Loss: 0.087050\n",
+      "Epoch 20/20 - Loss: 0.087050\n"
      ]
     }
    ],
