--- a/model/hybrid_model.ipynb
+++ b/model/hybrid_model.ipynb
@@ -1032,7 +1032,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Epoch 14/40:  84%|████████▎ | 157/188 [03:53<00:42,  1.37s/it]"
+      "Epoch 14/40:  91%|█████████ | 171/188 [04:13<00:26,  1.55s/it]"
      ]
     }
    ],
