final report + upd slides + code

--- a/Report/main.tex
+++ b/Report/main.tex
@@ -79,7 +79,7 @@ Model design choices were guided by empirical results rather than assumptions. A
 
 \subsection*{2.1 Quantum Layer Optimization}
 
-A grid search was performed over key quantum circuit parameters, \texttt{n\_qubits}, \texttt{q\_depth}, and \texttt{n\_rot\_params}, to evaluate their influence on forecasting performance. This included all combinations of gate complexity and circuit depth, with results assessed using MAE and average percentage error as shown in Figure~\ref{fig:quantum analysis}.
+A grid search was performed over key quantum circuit parameters, \texttt{n\_qubits} from 2 to 6, \texttt{q\_depth} from 1 to 7, and \texttt{n\_rot\_params} from 1 to 3, to evaluate their influence on forecasting performance. This included all combinations of gate complexity and circuit depth, with results assessed using MAE and average percentage error as shown in Figure~\ref{fig:quantum analysis}.
 
 \begin{figure}[H]
     \centering
